k8s-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-demo
  name: java-demo
  namespace: test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
#    nodePort: 30018
  selector:
    app: java-demo
#  type: NodePort
